Bug 15311 - fd_load() function implicitly closes the fd where it should not
Summary: fd_load() function implicitly closes the fd where it should not
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-16 08:49 UTC by Volker Lendecke
Modified: 2023-03-09 09:23 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.18, 4.17 and 4.16 (1.43 KB, patch)
2023-02-16 12:31 UTC, Volker Lendecke
vl: review? (slow)
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2023-02-16 08:49:11 UTC
Bug for https://gitlab.com/samba-team/samba/-/merge_requests/2933
Comment 1 Samba QA Contact 2023-02-16 12:14:03 UTC
This bug was referenced in samba master:

206dcf7d426e9e85c896c54839008e194d9a2824
Comment 2 Volker Lendecke 2023-02-16 12:31:12 UTC
Created attachment 17759 [details]
Patch for 4.18, 4.17 and 4.16

Patch for all supported backlevel releases
Comment 3 Andreas Schneider 2023-02-20 10:43:12 UTC
Comment on attachment 17759 [details]
Patch for 4.18, 4.17 and 4.16

LGTM
Comment 4 Andreas Schneider 2023-02-20 10:56:06 UTC
Jule, can you please apply the patch to the corresponding branches? Thanks!
Comment 5 Jule Anger 2023-02-23 08:44:09 UTC
Pushed to autobuild-v4-{18,17}-test.

Due to the soon release of 4.18.0 there will probably be no further bug fix release for 4.16. In case there will be another 4.16 release, I will push the patch then :-)
Comment 6 Samba QA Contact 2023-02-23 13:38:05 UTC
This bug was referenced in samba v4-17-test:

f4556250b87cd166c7516b7ebe28e2a6ca09eb7f
Comment 7 Samba QA Contact 2023-02-24 09:51:11 UTC
This bug was referenced in samba v4-18-test:

b829940535215f0608bc927829544cfa8a80e934
Comment 8 Jule Anger 2023-02-24 11:08:19 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-03-01 12:47:01 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.0rc4):

b829940535215f0608bc927829544cfa8a80e934
Comment 10 Samba QA Contact 2023-03-09 09:23:00 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.6):

f4556250b87cd166c7516b7ebe28e2a6ca09eb7f